decaf_PA3/bin/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | GuardedIfStmt
  36       | GuardedDoStmt
  37       | StmtBlock

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  Expr : INC LValue
  47       | DEC LValue
  48       | LValue INC
  49       | LValue DEC
  50       | LValue
  51       | Call
  52       | Constant
  53       | Expr '+' Expr
  54       | Expr '-' Expr
  55       | Expr '*' Expr
  56       | Expr '/' Expr
  57       | Expr '%' Expr
  58       | Expr EQUAL Expr
  59       | Expr NOT_EQUAL Expr
  60       | Expr '<' Expr
  61       | Expr '>' Expr
  62       | Expr LESS_EQUAL Expr
  63       | Expr GREATER_EQUAL Expr
  64       | Expr AND Expr
  65       | Expr OR Expr
  66       | '(' Expr ')'
  67       | '-' Expr
  68       | '!' Expr
  69       | Expr '?' Expr ':' Expr
  70       | READ_INTEGER '(' ')'
  71       | READ_LINE '(' ')'
  72       | THIS
  73       | NEW IDENTIFIER '(' ')'
  74       | NEW Type '[' Expr ']'
  75       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  76       | NUMINSTANCES '(' IDENTIFIER ')'
  77       | '(' CLASS IDENTIFIER ')' Expr

  78  Constant : LITERAL
  79           | NULL

  80  Actuals : ExprList
  81          |

  82  ExprList : ExprList ',' Expr
  83           | Expr

  84  WhileStmt : WHILE '(' Expr ')' Stmt

  85  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  86  BreakStmt : BREAK

  87  IfStmt : IF '(' Expr ')' Stmt ElseClause

  88  ElseClause : ELSE Stmt
  89             |

  90  ReturnStmt : RETURN Expr
  91             | RETURN

  92  PrintStmt : PRINT '(' ExprList ')'

  93  GuardedIfStmt : IF GuardedStmtList FI

  94  GuardedDoStmt : DO GuardedStmtList OD

  95  GuardedStmtList : GuardedStmtList GUARD GuardedStmt
  96                  | GuardedStmt

  97  GuardedStmt : Expr ':' Stmt

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	DO  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'{'  shift 41
	'}'  shift 66
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	ReturnStmt  goto 74
	PrintStmt  goto 75
	BreakStmt  goto 76
	GuardedIfStmt  goto 77
	GuardedDoStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (79)

	.  reduce 79


state 47
	Expr : THIS .  (72)

	.  reduce 72


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (84)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (85)

	'('  shift 85
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (87)
	GuardedIfStmt : IF . GuardedStmtList FI  (93)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 86
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83
	GuardedStmtList  goto 90
	GuardedStmt  goto 91


state 51
	ReturnStmt : RETURN . Expr  (90)
	ReturnStmt : RETURN .  (91)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42
	';'  reduce 91

	LValue  goto 87
	Expr  goto 92
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 52
	BreakStmt : BREAK .  (86)

	.  reduce 86


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (73)
	Expr : NEW . Type '[' Expr ']'  (74)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 93
	.  error

	Type  goto 94


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (92)

	'('  shift 95
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (70)

	'('  shift 96
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (71)

	'('  shift 97
	.  error


state 57
	Constant : LITERAL .  (78)

	.  reduce 78


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (75)

	'('  shift 98
	.  error


state 59
	Expr : INC . LValue  (46)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 99
	Expr  goto 80
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 60
	Expr : DEC . LValue  (47)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 100
	Expr  goto 80
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 61
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (76)

	'('  shift 101
	.  error


state 62
	GuardedDoStmt : DO . GuardedStmtList OD  (94)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83
	GuardedStmtList  goto 102
	GuardedStmt  goto 91


state 63
	Expr : '-' . Expr  (67)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 103
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 64
	Expr : '!' . Expr  (68)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 104
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 65
	Expr : '(' . Expr ')'  (66)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (77)
	Receiver : .  (42)

	CLASS  shift 105
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 106
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 66
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (37)

	.  reduce 37


state 69
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 70
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 107
	.  error


state 71
	Stmt : IfStmt .  (29)

	.  reduce 29


state 72
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 73
	Stmt : ForStmt .  (31)

	.  reduce 31


state 74
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 108
	.  error


state 75
	Stmt : PrintStmt . ';'  (33)

	';'  shift 109
	.  error


state 76
	Stmt : BreakStmt . ';'  (34)

	';'  shift 110
	.  error


state 77
	Stmt : GuardedIfStmt .  (35)

	.  reduce 35


state 78
	Stmt : GuardedDoStmt .  (36)

	.  reduce 36


state 79
	SimpleStmt : LValue . '=' Expr  (38)
	Expr : LValue . INC  (48)
	Expr : LValue . DEC  (49)
	Expr : LValue .  (50)
